ubuntukylin-theme (1.7.1) zesty; urgency=medium

  * add 16x16/panel in ukui-icon-theme.
  * update kylin_greeter_background.png
  * update text plymouth

 -- ShuiLu Pi <shuilupi@ubuntukylin.com>  Tue, 11 Apr 2017 10:13:32 +0800

ubuntukylin-theme (1.7.0) zesty; urgency=medium

  * add ukui-theme and ukui-icon-theme.
  * adapt to new Nautilus icon name.(LP: #1669663)
  * remove empty directory
  * Don't depend on unity-greeter or kylin-greeter

 -- ShuiLu Pi <shuilupi@ubuntukylin.com>  Sun, 01 Apr 2017 00:39:49 +0800

ubuntukylin-theme (1.6.2) yakkety; urgency=medium

  * update theme from upstream for gtk3.20:
      -gedit: Don't set a border on the 'x of y' thing in the search results
      -gtk-widgets: Set a proper minimum width on levelbar troughs
      -nautilus :Remove box-shadow from .background:backdrop.
      -gtk-widgets-borders: Fix jumping menu items. (LP: #1617415)
      -add libreoffice.css: fix gtk3 toolbar theming for LibreOffice (LP: #1580537)
  * change ubuntukylin-logo to 16.10 (LP: #1618326).

 -- zhangchao <zhangchao@ubuntukylin.com>  Tue, 11 Oct 2016 19:30:08 +0800

ubuntukylin-theme (1.6.1.2) yakkety; urgency=medium

  * change kylin_greeter_background.png for 16.10 default wallpaper.

 -- zhangchao <zhangchao@ubuntukylin.com>  Sun, 09 Oct 2016 10:28:50 +0800

ubuntukylin-theme (1.6.1.1) yakkety; urgency=medium

  * debian/control: del Depend ubuntu-kylin-wizard.

 -- zhangchao <zhangchao@ubuntukylin.com>  Thu, 06 Oct 2016 11:10:49 +0800

ubuntukylin-theme (1.6.1) yakkety; urgency=medium

  * Adapt to flatpak style icon names for GNOME apps (LP: #1618138 #1623768)
  * fiexd caffeine icon wrong (LP: #1598445)
  * change libreoffice icons
  * improve the display effect of device icons
  * debian/control: add Depend ubuntu-kylin-wizard.

 -- zhangchao <zhangchao@ubuntukylin.com>  Tue, 04 Oct 2016 16:07:22 +0800

ubuntukylin-theme (1.6.0) yakkety; urgency=medium

  * Update Ubuntu kylin themes to support GTK 3.20. (LP:#1593048)