@@ -3,6 +3,7 @@ ubuntukylin-theme (1.7.1) zesty; urgency=medium
   * add 16x16/panel in ukui-icon-theme.
   * update kylin_greeter_background.png
   * update text plymouth
+  * update ukui-theme about button and entry
 
  -- ShuiLu Pi <shuilupi@ubuntukylin.com>  Tue, 11 Apr 2017 10:13:32 +0800
 
